--- a/src/styles/index.less
+++ b/src/styles/index.less
@@ -1,1 +1,19 @@
 @import url('./transition/index.less');
+*{
+    font-family: 'HarmonyOS Sans SC' !important;
+}
+
+.glass-card {
+    // background: linear-gradient(180deg, rgba(255, 255, 255, 0.34), rgba(255,255,255,0.56)) !important;
+    // border: 1px solid rgba(255,255,255,0.28) !important;
+    background: #FFFFFF4D !important;
+    box-shadow: 0px 4px 4px #5D725040;
+    border-radius: 30px;
+    // backdrop-filter: blur(10px) saturate(120%) !important;
+}
+
+/* 深色模式下的 glass-card 覆写 */
+.dark .glass-card {
+    background: #30303028 !important;
+    box-shadow: 0px 4px 4px #33333340;
+}
