--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -18,7 +18,7 @@
     --muted: #F6D1CD;
     --muted-foreground: #BD1714;
     --shallow: #ffe6e3;
-    --shallow-foreground: #c0a5a5;
+    --shallow-foreground: #967070;
     --accent: #292929;
     --accent-foreground: #FFFFFF;
     --decoration: #A6B6DE;
