--- a/src/styles/index.less
+++ b/src/styles/index.less
@@ -14,10 +14,13 @@
 
 /* 深色模式下的 glass-card 覆写 */
 .dark .glass-card {
-    background: #66666628 !important;
+    background: #38383828 !important;
     box-shadow: 0px 4px 4px #11111180;
 }
 
+.n-layout-scroll-container {
+    overflow: hidden !important;
+}
 
 .n-form-item {
     /* native-ui checkbox */
