fix: menu dropdown theme

--- a/src/styles/index.less
+++ b/src/styles/index.less
@@ -14,12 +14,16 @@
 
 /* 深色模式下的 glass-card 覆写 */
 .dark .glass-card {
-    background: #38383828 !important;
-    box-shadow: 0px 4px 4px #11111180;
+    background: #2e2e2e2c !important;
+    box-shadow: 0px 4px 4px #0e0e0e57;
 }
 
 .n-layout-scroll-container {
     overflow: hidden !important;
+}
+
+.n-list {
+    background:  transparent !important;
 }
 
 .n-form-item {
