--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -46,8 +46,8 @@
     --foreground: #FFFFFF;
     --card: #141414;
     --card-foreground: #FFFFFF;
-    --popover: #FFFFFF;
-    --popover-foreground: #0A0A0A;
+    --popover: #1a1a1a;
+    --popover-foreground: #FFFFFF;
     --primary: #BD1714;
     --primary-foreground: #FFFFFF;
     --secondary: #242424;
